need for deploy

--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,8 @@
         },
         "test": {
           "builder": "@angular/build:unit-test"
-        }
+        },
+        "testChange": "ok pour push"
       }
     }
   }
