--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,10 @@
             ],
             "styles": [
               "src/styles.css"
-            ]
+            ],
+            "outputPath": "dist/frontend_mean",
+            "index": "src/index.html",
+            "baseHref": "/"
           },
           "configurations": {
             "production": {
