--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:frontend_mean": "node dist/frontend_mean/server/server.mjs",
-  "build:ssr": "ng build && ng run frontend_mean:server",
-  "serve:ssr": "node dist/frontend_mean/server/main.js"  },
+    "serve:ssr:frontend_mean": "node dist/frontend_mean/server/server.mjs"
+  },
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
@@ -29,9 +28,7 @@
     "@angular/core": "21.1.4",
     "@angular/forms": "21.1.4",
     "@angular/platform-browser": "21.1.4",
-    "@angular/platform-server": "21.1.4",
     "@angular/router": "21.1.4",
-    "@angular/ssr": "21.1.4",
     "@ng-bootstrap/ng-bootstrap": "^20.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
