--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,12 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
@@ -47,7 +53,8 @@
                 }
               ],
               "outputHashing": "all"
-            },
+            }
+            ,
             "development": {
               "optimization": false,
               "extractLicenses": false,
