--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "private": true,
   "packageManager": "npm@10.9.2",
   "dependencies": {
+    "@angular/cdk": "~21.1.5",
     "@angular/common": "21.1.4",
     "@angular/core": "21.1.4",
     "@angular/forms": "21.1.4",
+    "@angular/material": "~21.1.5",
     "@angular/platform-browser": "21.1.4",
     "@angular/router": "21.1.4",
     "@ng-bootstrap/ng-bootstrap": "^20.0.0",
@@ -41,6 +43,7 @@
     "@angular/cli": "21.1.4",
     "@angular/compiler": "21.1.4",
     "@angular/compiler-cli": "21.1.4",
+    "@angular/material": "^21.1.5",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
     "jsdom": "^27.1.0",
