--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@ng-bootstrap/ng-bootstrap": "^20.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
+    "echarts": "^6.0.0",
     "express": "^5.1.0",
+    "ngx-echarts": "^21.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -44,6 +47,7 @@
     "@angular/compiler": "21.1.4",
     "@angular/compiler-cli": "21.1.4",
     "@angular/material": "^21.1.5",
+    "@types/echarts": "^4.9.22",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
     "jsdom": "^27.1.0",
