modification de version

--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   "private": true,
   "packageManager": "npm@10.9.2",
   "dependencies": {
-    "@angular/cdk": "~21.1.5",
+    "@angular/cdk": "^21.1.4",
     "@angular/common": "21.1.4",
     "@angular/core": "21.1.4",
     "@angular/forms": "21.1.4",
-    "@angular/material": "~21.1.5",
+    "@angular/material": "^21.1.4",
     "@angular/platform-browser": "21.1.4",
     "@angular/router": "21.1.4",
     "@ng-bootstrap/ng-bootstrap": "^20.0.0",
@@ -46,7 +46,6 @@
     "@angular/cli": "21.1.4",
     "@angular/compiler": "21.1.4",
     "@angular/compiler-cli": "21.1.4",
-    "@angular/material": "^21.1.5",
     "@types/echarts": "^4.9.22",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
